<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>practica3</name>
  <version>0.0.1</version>
  <description>Practica3 avanzar y girar con tf</description>
  <maintainer email="r.bartolome.2022@alumnos.urjc.es">rui</maintainer>
  <license>Apache License, Version 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roscpp</depend>
  <depend>kobuki_ros_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
